Trying to fix shadow issue on mobile

--- a/src/card.css
+++ b/src/card.css
@@ -96,6 +96,7 @@ h3 {
   }
   img {
     width: 70px;
+    margin: 9px;
     transform: translate(0, -45px);
     filter: drop-shadow(0px 0px 3px rgb(160, 200, 250));
     border: 2px solid rgb(160, 200, 250);
